--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,16 @@
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
 version=0.005
 
 name=Dist-Zilla-Plugin-InsertDistImage
 
 [@Author::PERLANCAR]
+:version=0.609
 
-:version=0.58
 [Prereqs]
 perl=5.010001
 namespace::autoclean=0
@@ -12,6 +18,7 @@ strict=0
 warnings=0
 Dist::Zilla::Role::FileFinderUser=0
 Dist::Zilla::Role::FileMunger=0
+Dist::Zilla::Role::GetSharedFileURL=0
 File::Slurper=0
 Moose=0
 URI=0
